<resources>
    <string name="app_name">Weather</string>
    <string name="submit">Submit</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="max_temp">Max temp</string>
    <string name="min_temp">Min temp</string>
    <string name="enter_city">Enter City</string>
</resources>
